fix cards login & register in dark mode

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -116,10 +116,6 @@ main {
   height: 200px;
 }
 
-.logo-green {
-  background-color: #0a8d48;
-}
-
 .arrows-btn {
   border: none;
   color: #a3a3a3;
